fixes continue button alignment

--- a/assignment0504.css
+++ b/assignment0504.css
@@ -102,14 +102,16 @@ body{
 }
 
 button{
-    margin-left: 55px;
+    margin-left: 6px;
+    margin-right: 15px;
+    margin-bottom: 9px;
     margin-top: 4px;
-    background-color: rgb(94, 93, 93);
+    background-color: rgb(41, 38, 38);
     border: hidden;
     padding: 10px;
     border-radius: 20px;
     color: white;
-    width: 70%;
+    width: 99%;
     
 }
 
